--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body{
 
-    background-image: linear-gradient(0deg, rgb(71, 71, 71) 23.8%, rgb(221,224,252) 92%);
+    background-image: linear-gradient(0deg, rgb(238, 24, 24) 23.8%, rgb(2, 27, 245) 92%);
     height: 100vh;
     display: flex;
     justify-content: center;
